...
                        <viewControllerLayoutGuide type="bottom" id="jYP-5N-3Ir"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kxW-GN-5Hj">
                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xPV-fo-fsS">
                                <rect key="frame" x="20" y="262" width="728" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="bu1-mI-gOK"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MnA-AZ-0Lv">
                                <rect key="frame" x="20" y="342" width="728" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="ueJ-Vi-7DP"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
...
                            <constraint firstItem="xPV-fo-fsS" firstAttribute="centerY" secondItem="kxW-GN-5Hj" secondAttribute="centerY" id="uRx-Sc-Q5L"/>
                            <constraint firstAttribute="leadingMargin" secondItem="xPV-fo-fsS" secondAttribute="leading" id="ug7-Em-ueW"/>
                            <constraint firstAttribute="leadingMargin" secondItem="MnA-AZ-0Lv" secondAttribute="leading" id="xfj-5w-hOd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Create Account" id="7w8-b2-7sw">
                        <barButtonItem key="backBarButtonItem" title="Back" id="tTL-Kt-Mn5"/>
                        <barButtonItem key="leftBarButtonItem" title="Back" id="8yY-Sd-0Po">
                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="gfQ-GH-3h8" kind="show" id="OX9-ZS-AdF"/>
                            </connections>
                        </barButtonItem>
...
                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wst-6E-3uI">
                                        <rect key="frame" x="266" y="533" width="237" height="100"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="237" id="bwl-YR-S3v"/>
                                            <constraint firstAttribute="height" constant="100" id="mZ7-mc-fJf"/>
                                        </constraints>
                                        <state key="normal" image="aboutButton">
                                            <color key="titleColor" red="0.9882352941176471" green="0.92549019607843142" blue="0.3843137254901961" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="mlD-ht-b2I" kind="show" id="AmA-jT-RtM"/>
                                        </connections>
                                    </button>
...
                                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N12-WP-wIn">
                                        <rect key="frame" x="266" y="376" width="237" height="100"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="237" id="7wx-5W-eBX"/>
                                            <constraint firstAttribute="height" constant="100" id="VcW-uX-h9f"/>
                                        </constraints>
                                        <state key="normal" image="loginButton">
                                            <color key="titleColor" red="1" green="0.93330842756424837" blue="0.38572404750999789" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="loginButton:" destination="gfQ-GH-3h8" eventType="touchUpInside" id="BAv-ei-EKr"/>
                                        </connections>
                                    </button>
...
                            <constraint firstItem="Gvi-N5-W8R" firstAttribute="top" secondItem="rcT-m1-tfq" secondAttribute="bottom" constant="8" id="cBD-67-Ph0"/>
                            <constraint firstItem="Gvi-N5-W8R" firstAttribute="leading" secondItem="m7y-Ey-LTg" secondAttribute="leadingMargin" id="cMN-NR-mjO"/>
                            <constraint firstItem="Gvi-N5-W8R" firstAttribute="trailing" secondItem="m7y-Ey-LTg" secondAttribute="trailingMargin" id="f8k-XK-SWu"/>
                            <constraint firstItem="Mfk-8m-oYN" firstAttribute="top" secondItem="m7y-Ey-LTg" secondAttribute="top" id="mPX-0u-mtk"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="About" id="O0B-eq-iun">
                        <barButtonItem key="backBarButtonItem" title="Back" id="ePv-ZI-7pO"/>
                        <barButtonItem key="leftBarButtonItem" title="Back" id="8S9-B0-G5U">
                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="gfQ-GH-3h8" kind="show" id="2Pw-yJ-zur"/>
                            </connections>
...
