...
            if let password = password.text {
           
                FIRAuth.auth()?.signIn(withEmail: email, password: password) { (user, error) in
//                    if let user = user {
                    if let user = FIRAuth.auth()?.currentUser {
                        if !user.isEmailVerified {
                            let alertVC = UIAlertController(title: "Error", message: "Sorry. Your email adress has not yet been verified. Would you like us to send another verification email to \(String(describing: self.email.text)).", preferredStyle: .alert)
                            let alertActionOkay = UIAlertAction(title: "Okay", style: .default) { (_) in
                                user.sendEmailVerification(completion: nil)
                            }
                            let alertActionCancel = UIAlertAction(title: "Cancel", style: .default, handler: nil)
                            alertVC.addAction(alertActionOkay)
                            alertVC.addAction(alertActionCancel)
...
